change default msmtp config

--- a/mail-setup/.msmtprc
+++ b/mail-setup/.msmtprc
@@ -5,12 +5,15 @@ defaults
 
 ## Always use TLS.
 tls on
-auth on
-tls_fingerprint 47:BE:4A:2A:F4:D7:26:B9:8A:D7:23:EE:D1:1E:C6:CB:7B:58:A9:CA:E9:0D:56:38:E9:6F:B2:B0:37:F2:1F:CD
+## tls_certcheck on
+## tls_starttls on
+## tls_fingerprint 47:BE:4A:2A:F4:D7:26:B9:8A:D7:23:EE:D1:1E:C6:CB:7B:58:A9:CA:E9:0D:56:38:E9:6F:B2:B0:37:F2:1F:CD
+tls_trust_file /etc/ssl/cert.pem
 
 ## Now for unimelb
 account msmtp.unimelb
 host smtp.office365.com
+auth on
 from "lane.s@unimelb.edu.au"
 user "lane.s@unimelb.edu.au"
 passwordeval "security find-internet-password -s msmtp.unimelb -w"
